--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Free NHL Live Stream Now | NHLStreams.xyz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta name="description" content="Watch Free NHL Streams, No ads for free registered users! Supporting mobile, iphone, ios, laptop, tablet and Chromecast. ">
+			<meta name="subject" content="The Best Free NHL Stream Service, with full device support.">	
+        <link rel="canonical" href="https://1-nhlstreams.pages.dev/" itemprop="url">
+	<meta name="robots" content="index, follow">
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
+	<link href="/style.css" rel="stylesheet">
+<meta name="msvalidate.01" content="A8CB8B9F3405B6199183311AE80A6FFF" />
+</head>
+<body>
+	<div class="content">
+		<div class="container">
+			<div class="header">
+				<img src="https://nhl-streams.pages.dev/nhlstream.jpeg" width="300" height="150" alt="nhlstream logo">
+				<h1>Free NHL Live Stream Now | NHLStreams.xyz</h1>				
+			</div>
+			<div class="main">
+			<p>NHL Streams is a platform that provides free, high-quality live streaming of National Hockey League (NHL) games. It offers fans access to all NHL matchups, including regular season games, playoffs, and the Stanley Cup Finals, without the need for expensive subscriptions, cable packages, or sign-up. Designed to make hockey accessible to everyone, NHL Streams allows fans to enjoy their favorite teams and games from anywhere at no cost</p>
 
+				<ul class="m-list">
+					<li class="bntl">
+						<span><a href="https://nhl-streams.xyz/">NHL Live Streams Schedule</a></span>
+                                                 <span>live</span>
+					</li>
+				
+				</ul>
+
+				    
+				</div>
+			</div>
+		</div>
+	</div>
+	</div></div>
+</body>
+</html>
