--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 	<meta charset="utf-8">
 	<title>Free NHL Live Stream Now | NHLStreams.xyz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
-<meta name="description" content="Watch Free NHL Streams, No ads for free registered users! Supporting mobile, iphone, ios, laptop, tablet and Chromecast. ">
-			<meta name="subject" content="The Best Free NHL Stream Service, with full device support.">	
-        <link rel="canonical" href="https://1-nhlstreams.pages.dev/" itemprop="url">
+	<link rel="icon" type="image/x-icon" href="/favicon.png">
+        <meta name="description" content="Watch Free NHL Streams, No ads for free registered users! Supporting mobile, iphone, ios, laptop, tablet and Chromecast. ">		
+        <link rel="canonical" href="https://free-nhl-live-stream-now.pages.dev/" itemprop="url">
 	<meta name="robots" content="index, follow">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 	<link href="/style.css" rel="stylesheet">
@@ -17,7 +16,7 @@
 	<div class="content">
 		<div class="container">
 			<div class="header">
-				<img src="https://nhl-streams.pages.dev/nhlstream.jpeg" width="300" height="150" alt="nhlstream logo">
+				<img src="/nhl-streams-site-logo.png" width="300" height="150" alt="nhlstream logo">
 				<h1>Free NHL Live Stream Now | NHLStreams.xyz</h1>				
 			</div>
 			<div class="main">
