--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&amp;display=swap" rel="stylesheet">
 	<link href="/style.css" rel="stylesheet">
 <meta name="msvalidate.01" content="A8CB8B9F3405B6199183311AE80A6FFF" />
+<meta name="google-site-verification" content="h4Iulnb_F2PeJCH-Q_hmA8Oa49jSlCN1ItqX_qszSTY" />	
 </head>
 <body>
 	<div class="content">
